examples/type_system/failing/84_match_tuple_gap_no_fallback.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E015: Tuple match without unguarded catch-all is conservatively non-exhaustive.
let t = (1, true);

match t {
    (1, true) -> 1,
    (2, false) -> 2
};
